--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,12 +11,12 @@ SET_TARGET_PROPERTIES(EventBusTest PROPERTIES
 		CXX_STANDARD_REQUIRED YES
 		)
 
-TARGET_COMPILE_OPTIONS(EventBusTest PUBLIC
-		-Wall -pedantic
-		-Wnon-virtual-dtor
-		-Werror
-		-Wno-error=deprecated-declarations
-		)
+# TARGET_COMPILE_OPTIONS(EventBusTest PUBLIC
+# 		-Wall -pedantic
+# 		-Wnon-virtual-dtor
+# 		-Werror
+# 		-Wno-error=deprecated-declarations
+# 		)
 IF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 	TARGET_COMPILE_OPTIONS(EventBusTest PRIVATE
 		-Wno-error=unknown-argument
