Fix Android build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,11 +38,11 @@ SET_TARGET_PROPERTIES(EventBus PROPERTIES
 		CXX_STANDARD 14
 		)
 
-IF(NOT CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
-	TARGET_COMPILE_FEATURES(EventBus
-			PUBLIC cxx_auto_type
-			)
-ENDIF()
+# IF(NOT CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
+# 	TARGET_COMPILE_FEATURES(EventBus
+# 			PUBLIC cxx_auto_type
+# 			)
+# ENDIF()
 
 INSTALL(TARGETS EventBus EXPORT EventBusConfig
 		ARCHIVE DESTINATION lib/
